fix: Scrollbar, bigger control/bend points

--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,20 @@ code {
 .react-colorful__pointer {
   cursor: pointer;
 }
+
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
+  height: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: #000000;
+  box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+}
+
+::-webkit-scrollbar-track {
+  background-color: #fff;
+  border-radius: 4px;
+}
